--- a/example/app.json
+++ b/example/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "example",
-  "displayName": "example"
+  "name": "get_music_files_v3_dev",
+  "displayName": "get_music_files_v3_dev"
 }
